--- a/src/styles.css
+++ b/src/styles.css
@@ -79,3 +79,114 @@ input {
 .risk-calculator-input-labels label {
   margin-right: 40px;
 }
+
+.button_set{
+  display: flex;
+  align-items: center;
+  margin-left: 500px;
+}
+
+.single_button{
+  height: 56px;
+    width: 62px;
+    color: black;
+    border: 2px solid black;
+    border-radius: 5px;
+    margin: 2px;
+    font-size: 27px;
+}
+
+.single_buttons{
+  height: 56px;
+    width: 122px;
+    color: black;
+    border: 2px solid black;
+    border-radius: 5px;
+    margin: 2px;
+    font-size: 27px;
+}
+
+.continue{
+  height: 56px;
+    width: 122px;
+    color: black;
+    border: 2px solid black;
+    border-radius: 5px;
+    margin: 2px;
+    font-size: 27px;
+}
+
+.table{
+  display: flex;
+  margin-top:50px;
+  right: 250px;
+  margin-left: 400px;
+}
+
+.chartButton{
+  height: 56px;
+    width: 102px;
+    color: black;
+    border: 2px solid black;
+    border-radius: 5px;
+    margin: 2px;
+    font-size: 27px;
+}
+
+.chartt{
+  display: flex;
+}
+
+.tableButton{
+  height: 56px;
+    width: 102px;
+    color: black;
+    border: 2px solid black;
+    border-radius: 5px;
+    margin: 2px;
+    font-size: 27px;
+}
+
+.doughnut{
+  height:400px;
+  width:400px;
+  right: 450px;
+  position: fixed;
+  margin-top:100px;
+}
+
+.heading{
+  justify-content: center;
+    align-items: center;
+    align-content: center;
+    display: flex;
+
+}
+
+.risk-selector-header-labels {
+  display: flex;
+  flex-direction: column;
+  width: 730px;
+  margin-left: 500px;
+}
+
+.risk-label-select {
+  display: flex;
+  justify-content: center;
+  font-size: 20px;
+  font-weight: bold;
+  margin-right: 56px;
+}
+.risk-label-levels {
+  display: flex;
+  flex-direction: row;
+  font-size: 18px;
+  justify-content: space-between;
+}
+
+.risk-label {
+  display: flex;
+  margin-right: 96px;
+  margin-bottom: 5px;
+  margin-top: 5px;
+}
