--- a/src/styles.css
+++ b/src/styles.css
@@ -150,8 +150,7 @@ input {
 .doughnut{
   height:400px;
   width:400px;
-  right: 450px;
-  position: fixed;
+  margin-left:400px;
   margin-top:100px;
 }
 
